--- a/TMDbApp/package.json
+++ b/TMDbApp/package.json
@@ -10,8 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
+    "axios": "0.24.0",
     "react": "17.0.2",
-    "react-native": "0.67.2"
+    "react-native": "0.67.2",
+    "react-native-fast-image": "^8.5.11",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-loading-spinner-overlay": "^3.0.0",
+    "react-native-progress-circle": "^2.1.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
+    "react-native-testing-library": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
